--- a/views/clients/pages/user/login.pug
+++ b/views/clients/pages/user/login.pug
@@ -16,7 +16,10 @@ block main
                     .form-outline.mb-4(data-mdb-input-init='')
                       input#form3Example4cg.form-control.form-control-lg(type='password' name='password')
                       label.form-label(for='form3Example4cg') Mật khẩu 
-                    
+                    p.text-center.text-muted.mt-5.mb-0
+                      | Bạn quên mật khẩu ? 
+                      a.fw-bold.text-body(href='/user/password/forgot')
+                        u Lấy lại
                     .d-flex.justify-content-center
                       button.btn.btn-success.btn-block.btn-lg.gradient-custom-4.text-body(type='submit', data-mdb-button-init='', data-mdb-ripple-init='') Đăng nhập 
                     p.text-center.text-muted.mt-5.mb-0
