--- a/views/clients/pages/user/profile.pug
+++ b/views/clients/pages/user/profile.pug
@@ -15,7 +15,7 @@ block main
                 p.text-muted.mb-4 Bay Area, San Francisco, CA
                 .d-flex.justify-content-center.mb-2
                   button.btn.btn-primary(type='button',btn-logout, data-mdb-button-init='', data-mdb-ripple-init='') Đăng xuất 
-                  button.btn.btn-outline-primary.ms-1(type='button', data-mdb-button-init='', data-mdb-ripple-init='') Chỉnh sửa 
+                  a(href="/user/profiles/edit").btn.btn-outline-primary.ms-1(type='button', data-mdb-button-init='', data-mdb-ripple-init='') Chỉnh sửa 
             .card.mb-4.mb-lg-0
               .card-body.p-0
                 ul.list-group.list-group-flush.rounded-3
