--- a/public/css/style.css
+++ b/public/css/style.css
@@ -719,3 +719,19 @@ select.form-control:not([size]):not([multiple]) {
 .like-change-color{
   color: red
 }
+ /* CSS tùy chỉnh */
+ .product-list {
+  padding: 20px;
+}
+.product-item {
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
+}
+.product-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.product-title {
+  font-weight: bold;
+}
