--- a/views/clients/layouts/default.pug
+++ b/views/clients/layouts/default.pug
@@ -12,6 +12,14 @@ html(lang="en")
     block main 
 
     include ../partials/footer.pug 
-
-
+    
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js', integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz', crossorigin='anonymous')
+    //socket 
+    script(src="/socket.io/socket.io.js")
+    script(src="/js/socket.js")
+    //end socket 
+    //emoji picker 
+    script(type='module', src='https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js')
+    //end emoji picker 
     script(rel="stylesheet", src="/js/script.js")
+    
