--- a/views/clients/partials/footer.pug
+++ b/views/clients/partials/footer.pug
@@ -2,18 +2,18 @@
       footer.py-5
         .row
           .col-6.col-md-2.mb-3
-            h5 Section
+            h5 Thông tin 
             ul.nav.flex-column
               li.nav-item.mb-2
-                a.nav-link.p-0.text-muted(href='#') Home
+                a.nav-link.p-0.text-muted(href='#') Tên website: #{settingGeneral.websiteName}
               li.nav-item.mb-2
-                a.nav-link.p-0.text-muted(href='#') Features
+                a.nav-link.p-0.text-muted(href='#') Số điện thoại: #{settingGeneral.phone}
               li.nav-item.mb-2
-                a.nav-link.p-0.text-muted(href='#') Pricing
+                a.nav-link.p-0.text-muted(href='#') Email: #{settingGeneral.email}
               li.nav-item.mb-2
-                a.nav-link.p-0.text-muted(href='#') FAQs
+                a.nav-link.p-0.text-muted(href='#') Địa chỉ: #{settingGeneral.address}
               li.nav-item.mb-2
-                a.nav-link.p-0.text-muted(href='#') About
+                a.nav-link.p-0.text-muted(href='#') CopyRight: #{settingGeneral.copyRight}
           .col-6.col-md-2.mb-3
             h5 Section
             ul.nav.flex-column
