--- a/views/clients/pages/products/detail.pug
+++ b/views/clients/pages/products/detail.pug
@@ -24,5 +24,18 @@ block main
                 li.list-group-item Số lượng 
                   input(type="number", name="quantity", value=1, min=1, max=productDetail.stock)
               button.btn.btn-success.mt-3(type='submit') Thêm vào giỏ hàng  
+    .container.mt-5
+      h2.mb-4 Phản hồi của người dùng 
+      ul.list-group
+        each item in feedback
+          li.list-group-item
+            .d-flex.justify-content-between
+              h5 #{item.infoUser.fullName}
+              p #{moment(item.createdAt).format('MMMM Do YYYY, h:mm:ss a')}
+              div
+                - for (let i = 1; i <= 5; i++)
+                  span.fa.fa-star(class=(i <= item.rating ? "checked" : ""))
+            p.mt-2 #{item.comment}
+        
             
         
