--- a/views/clients/pages/user/profile.pug
+++ b/views/clients/pages/user/profile.pug
@@ -11,11 +11,11 @@ block main
               .card-body.text-center
                 img.rounded-circle.img-fluid(src='https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp', alt='avatar', style='width: 150px;')
                 h5.my-3 #{user.fullName}
-                p.text-muted.mb-1 Thành viên mới 
-                p.text-muted.mb-4 Bay Area, San Francisco, CA
+                p.text-muted.mb-1 Tổng #{user.totalProduct} sản phẩm đã mua 
+                p.text-muted.mb-4 Tổng #{user.totalOrder  } hóa đơn đã thanh toán  
                 .d-flex.justify-content-center.mb-2
                   button.btn.btn-primary(type='button',btn-logout, data-mdb-button-init='', data-mdb-ripple-init='') Đăng xuất 
-                  a(href="/user/profiles/edit").btn.btn-outline-primary.ms-1(type='button', data-mdb-button-init='', data-mdb-ripple-init='') Chỉnh sửa 
+                  a(href="/user/profiles/edit").btn.btn-outline-primary.ms-1 Chỉnh sửa 
             .card.mb-4.mb-lg-0
               .card-body.p-0
                 ul.list-group.list-group-flush.rounded-3
@@ -80,45 +80,31 @@ block main
                         button(type='submit').btn.btn-primary Thêm   
                         
             .row
-              .col-md-6
-                .card.mb-4.mb-md-0
-                  .card-body
-                    p.mb-4
-                      span.text-primary.font-italic.me-1 assigment
-                      |  Project Status
-                    p.mb-1(style='font-size: .77rem;') Web Design
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 80%', aria-valuenow='80', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') Website Markup
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 72%', aria-valuenow='72', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') One Page
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 89%', aria-valuenow='89', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') Mobile Template
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 55%', aria-valuenow='55', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') Backend API
-                    .progress.rounded.mb-2(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 66%', aria-valuenow='66', aria-valuemin='0', aria-valuemax='100')
-              .col-md-6
-                .card.mb-4.mb-md-0
-                  .card-body
-                    p.mb-4
-                      span.text-primary.font-italic.me-1 assigment
-                      |  Project Status
-                    p.mb-1(style='font-size: .77rem;') Web Design
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 80%', aria-valuenow='80', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') Website Markup
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 72%', aria-valuenow='72', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') One Page
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 89%', aria-valuenow='89', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') Mobile Template
-                    .progress.rounded(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 55%', aria-valuenow='55', aria-valuemin='0', aria-valuemax='100')
-                    p.mt-4.mb-1(style='font-size: .77rem;') Backend API
-                    .progress.rounded.mb-2(style='height: 5px;')
-                      .progress-bar(role='progressbar', style='width: 66%', aria-valuenow='66', aria-valuemin='0', aria-valuemax='100')
+              
+              .col-lg-8(style='width: 1000px')
+                .card.mb-4
+                 if order.length > 0 
+                  each item in order
+                    .card-body
+                      h3 #{moment(createdAt).format('MMMM Do YYYY, h:mm:ss a')} 
+                      a(href="/checkout/order/detail/"+item.id) Chi tiết  
+                      table.table 
+                            thead 
+                              tr  
+                                th #
+                                th Ảnh 
+                                th Tên sản phẩm 
+                                th Số Lượng 
+                                th Thao tác 
+                            tbody 
+                              each product, index in item.products
+                                tr
+                                  td #{index}
+                                  td 
+                                    img(src=product.infoProduct.thumbnail, alt="" style='width: 50px; height: 50px')
+                                  td #{product.infoProduct.title}
+                                  td #{product.quantity}
+                                  td 
+                                    a(href="/products/detail/"+product.infoProduct.slug).btn.btn-outline-info Chi tiết 
+                 else 
+                    h1.text-center Bạn chưa mua bất cứ gì    
